--- a/.github/workflows/Test&Deploy.yml
+++ b/.github/workflows/Test&Deploy.yml
@@ -48,4 +48,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: martikan/ma-store:dev-${{ steps.date.outputs.date }}
+          tags: martikan/mastore-discovery:dev-${{ steps.date.outputs.date }}
